Fixed collapsed left panel width.

--- a/client/ide/styl/ide.styl
+++ b/client/ide/styl/ide.styl
@@ -97,8 +97,13 @@ body.ide.dark
       top               0
       left              0
       margin-left       39px
+      height            100%
       abs()
       fl()
+    .kdtabpaneview.active
+      margin-right      39px
+      width             auto
+      border-right      2px solid dark-tab-header-bg
 
 
 // vm list pane
